validate Checkout - close #199
